[package]
name = "safe-server-traffic"
version = "0.1.0"
edition = "2021"
authors = ["Hal Articode "]
license = "MIT"
repository = "https://github.com/tianzeshi-study/traffic"


[dependencies]
tokio = { version = "1", features = ["full"] }             # 异步运行时
clap = { version = "4", features = ["derive"] }            # 命令行参数解析
serde = { version = "1", features = ["derive"] }           # 配置反序列化
toml = "0.5"                                               # TOML 解析
rtnetlink = "0.16"                                          # Netlink 监听
dashmap = "5"                                              # 并发哈希表
log = "0.4"                                                # 日志接口
env_logger = "0.10"                                        # 日志实现
chrono = { version = "0.4", features = ["serde"] }         # 时间处理
anyhow = "1.0"
thiserror = "1.0"

futures = "0.3"
serde_json = "1.0"
netlink-packet-route = "0.22"
rayon = "1.10.0"



[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.3"
tempfile = "3.20.0"

[features]
default = []
