[package]
name = "safe-traffic-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "safe-traffic-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
safe-traffic-common = { version = "0.1.0", path = "../safe-traffic-common" }

[dev-dependencies]
tokio-test = "0.4"
