[package]
name = "safe-traffic-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "safe-traffic-cli"
path = "src/main.rs"

[dependencies]
clap = {workspace=true}
tokio = {workspace=true}
anyhow = {workspace=true}
serde_json = {workspace=true}
serde = {workspace=true}
chrono = { workspace=true}
safe-traffic-common = { version = "0.3.0", path = "../safe-traffic-common" }
ipnet = { workspace=true, features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
